--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.9.1"
