--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
